# fullstack-template

./: .gitignore
app-backend/: gunicorn.sh  pyproject.toml
app-backend/app_backend/: __main__.py
app-backend/app_backend/dao/: database_provider.py
app-backend/app_backend/dao/models/: __init__.py  base_model.py  rbac_models.py
app-backend/app_backend/restapi/: __init__.py
app-backend/migrations/: env.py  script.py.mako
app-backend/migrations/versions/: 87e282feabe8_add_rbac_tables.py  f86a22499df1_add_rbac_tables.py
app-backend/static/: index.html
app-backend/tests/: test_app_backend.py
app-backend/tests/dao/: test_database_provider.py
app-common/: pyproject.toml
app-common/app_common/: base_config.py
app-common/app_common/providers/: session_provider.py
