[tool.poetry]
name = "app-common"
version = "0.1.0"
description = "A set of common library utilities for writing backends without redoing a lot of code"
authors = ["vishnuvyas <vishnuvyas@gmail.com>"]
readme = "README.md"
packages = [{ include = "app_common"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.4"
asyncpg = "^0.30.0"
pydantic-settings = "^2.9.1"
httpx = "^0.28.1"
typer = "^0.15.3"
loguru = "^0.7.3"
coredis = "^4.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pytest-mypy = "^1.0.1"
ruff = "^0.11.8"
pytest-ruff = "^0.4.1"
pytest-cov = "^6.1.1"
aiosqlite = "^0.21.0"
alembic = "^1.15.2"
poetry = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
